# script-rs

./: Cargo.toml  Dockerfile
src/: main.rs
