[package]
name = "script-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = "0.12.22"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bon = "3.6.4"
bigdecimal = { version = "0.4.8", features = [
        "serde",
        "serde-json",
        "serde_json",
] }
alloy = { version = "1.0.7", features = ["full"] }
eyre = "0.6.12"
chrono = { version = "0.4.38", features = ["serde"] }
axum = { version = "0.7.7", features = ["macros"] }
dotenv = "0.15.0"
